J'ai enlever image dans catégorie de service
